csv部分の作成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
     "compilerOptions": {
         "allowJs": true,
-        "types": [
-            "@jxa/global-type"
-        ]
+        "types": ["@jxa/types", "node"],
     },
     "include": [
-        "**/*.js"
+        "*.ts",
     ]
 }
