--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc --build && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "azu",
   "license": "MIT",
   "devDependencies": {
-    "@jxa/global-type": "^1.0.3"
+    "@jxa/types": "^1.3.6",
+    "@types/node": "^22.13.0",
+    "tsc": "^2.0.4",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@jxa/run": "^1.3.6",
+    "csv-parse": "^5.6.0",
+    "fs": "^0.0.1-security",
+    "install": "^0.13.0",
+    "npm": "^11.1.0"
   }
 }
